--- a/kildeanalyse.html
+++ b/kildeanalyse.html
@@ -17,11 +17,13 @@
         <h1>Kildeanalyse</h1>
         <h4>Læs kilden og svar på hv-spørgsmålene</h4>
         <div class="col-xs-4 col-md-4 spm_container">
-            <h4 class="QuestionTask"></h4>
-            <select class="dropdown">
-            </select>
-            <br/>
-            <div class="btn btn-primary checkAnswer">Tjek svar </div>
+            <div class="spm_omraade">
+                <h4 class="QuestionTask"></h4>
+                <select class="dropdown">
+                </select>
+                <br/>
+                <div class="btn btn-primary checkAnswer">Tjek svar </div>
+            </div>
             <div class="analyse_container">
                 <h4>Din kildeanalyse:</h4>
                 <p class="analysetext"></p>
