opdateret funktionalitet --> score mm

--- a/kildeanalyse_2.html
+++ b/kildeanalyse_2.html
@@ -23,7 +23,7 @@
                 </select>
                 <br/>
                 <div class="btn btn-primary checkAnswer">Tjek svar </div>
-                <div class="score"></div>
+                <div class="score">Hej fra score</div>
             </div>
             <div class="analyse_container">
                 <h4>Din kildeanalyse:</h4>
@@ -39,7 +39,7 @@
     <script src="../library/custom_scripts.js"></script>
     <script src="kildeanalyse.js"></script>
     <script>
-        loadData("kildeanalyse.json");
+    loadData("kildeanalyse_2.json");
     </script>
     <script type="text/javascript">
     $(document).ready(function() {
