--- a/kildeanalyse.html
+++ b/kildeanalyse.html
@@ -31,7 +31,7 @@
                 <p class="analysetext"></p>
             </div>
         </div>
-        <div class="col-xs-8 col-md-8">
+        <div class="col-xs-8 col-md-8 right_container ">
             <div class="embed-responsive embed-responsive-16by9 kilde_container">
             </div>
         </div>
