--- a/kilder/KildeAnalyse.html
+++ b/kilder/KildeAnalyse.html
@@ -28,7 +28,7 @@
                 <p class="analysetext"></p>
             </div>
         </div>
-        <div class="col-xs-8 col-md-8">
+        <div class="col-xs-8 col-md-8 right_container ">
             <div class="embed-responsive embed-responsive-16by9 kilde_container" style="display: block;"><img class="pic" src="./KildeAnalyse_files/4-plakater-tryghed.jpg"></div>
         </div>
     <div class="col-xs-12"><h6 class="footerCopywrite"> <a href="http://localhost:8080/pf_about/index.html">Digitale læringsmaterialer  Copyright 2015</a></h6></div></div>
