--- a/kildeanalyse_6.html
+++ b/kildeanalyse_6.html
@@ -22,8 +22,8 @@
                 <h4 class="QuestionTask"></h4>
                 <select class="dropdown">
                 </select>
-                <br/>
-                <div class="btn btn-primary checkAnswer">Tjek svar </div>
+                
+                <div class="btn btn-primary btn-lg checkAnswer">Tjek svar </div>
                 <div class="score"></div>
             </div>
             <div class="analyse_container">
