--- a/kilder/KildeAnalyse.html
+++ b/kilder/KildeAnalyse.html
@@ -20,7 +20,7 @@
                 <h4 class="QuestionTask" style="display: block;">Hvem udtaler sig?</h4>
                 <select class="dropdown"><option value="Vælg dit svar" selected="">Vælg dit svar</option><option value="Socialdemokratiet">Socialdemokratiet</option><option value="Regeringen">Regeringen</option><option value="Folketinget">Folketinget</option><option value="Kernefamilien">Kernefamilien</option><option value="Kvinderne">Kvinderne</option></select>
                 <br>
-                <div class="btn btn-primary checkAnswer">Tjek svar </div>
+                <div class="btn btn-primary btn-lg checkAnswer">Tjek svar </div>
                 <div class="score">Rigtige svar: 0/9 Fejl: 0</div>
             </div>
             <div class="analyse_container">
