--- a/kildeanalyse_3.html
+++ b/kildeanalyse_3.html
@@ -23,7 +23,7 @@
                 <select class="dropdown">
                 </select>
                 <br/>
-                <div class="btn btn-primary checkAnswer">Tjek svar </div>
+                <div class="btn btn-primary btn-lg checkAnswer">Tjek svar </div>
                 <div class="score"></div>
             </div>
             <div class="analyse_container">
