--- a/kildeanalyse_6.html
+++ b/kildeanalyse_6.html
@@ -17,7 +17,7 @@
 
         <h1>Kildeanalyse</h1>
         <h4>Læs kilden og svar på hv-spørgsmålene</h4>
-        <div class="col-xs-4 col-md-4 spm_container">
+        <div class="col-xs-12 col-sm-4 spm_container">
             <div class="spm_omraade">
                 <h4 class="QuestionTask"></h4>
                 <select class="dropdown">
@@ -31,7 +31,7 @@
                 <p class="analysetext"></p>
             </div>
         </div>
-        <div class="col-xs-8 col-md-8 right_container ">
+        <div class="col-xs-12 col-sm-8 right_container ">
             <div class="embed-responsive embed-responsive-16by9 kilde_container">
             </div>
         </div>
