--- a/kildeanalyse_7.html
+++ b/kildeanalyse_7.html
@@ -14,15 +14,13 @@
 
 <body>
     <div class="container-fluid">
-
         <h1>Kildeanalyse</h1>
         <h4>Læs kilden og svar på hv-spørgsmålene</h4>
-        <div class="col-xs-4 col-md-4 spm_container">
+        <div class="col-xs-12 col-sm-4 spm_container">
             <div class="spm_omraade">
                 <h4 class="QuestionTask"></h4>
                 <select class="dropdown">
                 </select>
-                
                 <div class="btn btn-primary btn-lg checkAnswer">Tjek svar </div>
                 <div class="score"></div>
             </div>
@@ -31,7 +29,7 @@
                 <p class="analysetext"></p>
             </div>
         </div>
-        <div class="col-xs-8 col-md-8 right_container ">
+        <div class="col-xs-12 col-sm-8 right_container ">
             <div class="embed-responsive embed-responsive-16by9 kilde_container">
             </div>
         </div>
